# django-reddit-challenge

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
comment/: models.py  urls.py
comment/api/v1/: routes.py  serializers.py  views.py
comment/migrations/: 0001_initial.py
helpers/: filters.py  models.py  permissions.py  serializers.py  views.py
post/: models.py  urls.py
post/api/v1/: routes.py  serializers.py  views.py
post/migrations/: 0001_initial.py
posts/: models.py  urls.py
posts/api/v1/: permissions.py  routes.py  serializers.py  views.py
posts/migrations/: 0001_initial.py  0002_post.py  0003_comment.py
settings/: settings.py  urls.py
topic/: apps.py  models.py  urls.py
topic/api/v1/: routes.py  serializers.py  views.py
topic/migrations/: 0001_initial.py  0002_auto_20210712_2144.py
